--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -1,5 +1,5 @@
-
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"
@@ -8,12 +8,13 @@
   <body>
     <div class="container">
       <div class="header">
-        <h3 class="text-muted">Add text here</h3>
+        <h3 class="text-muted">App ktora rozozna ci je na fotke Robert Fico alebo Andrej Kiska.</h3>
       </div>
       <hr/>
       <div>
-      
+
       <form action="upload" method="post" enctype="multipart/form-data">
+        Select image to upload:<br /><br />
         <input type="file" name="file"><br /><br />
         <input type="submit" value="Upload">
       </form>
