--- a/api/templates/result.html
+++ b/api/templates/result.html
@@ -2,10 +2,6 @@
 
 <html>
    <body>
-   		{% if result == "fico" %}
-      	<p>Fico!!!</p>
-   		{% else %}
-   		<p>Kiska...</p>
-   		{% endif %}
+   		{result}
    </body>
 </html>
