html added for real

--- a/api/templates/result.html
+++ b/api/templates/result.html
@@ -2,6 +2,10 @@
 
 <html>
    <body>
-   	{result}
+   		{% if result == "fico" %}
+      	<p>Fico!!!</p>
+   		{% else %}
+   		<p>Kiska...</p>
+   		{% endif %}
    </body>
 </html>
